Dto class created

--- a/src/main/resources/templates/generated-data.html
+++ b/src/main/resources/templates/generated-data.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <table>
-            <!--TODO-->
+            <tr th:each=""></tr>
         </table>
     </body>
 </html>
