--- a/src/main/resources/templates/generated-data.html
+++ b/src/main/resources/templates/generated-data.html
@@ -3,10 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Generated data</title>
+        <link rel="stylesheet" href="/stylesheets/styles.css">
     </head>
     <body>
         <table>
-            <tr th:each=""></tr>
+            <thead>
+                <tr>
+                    <th th:each="header: ${data.keySet()}" th:text="${header}"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="i: ${#numbers.sequence(0, entries - 1)}">
+                    <td th:each="key: ${data.keySet()}" th:text="${data.get(key).get(i)}"></td>
+                </tr>
+            </tbody>
         </table>
     </body>
 </html>
